--- a/www/resources/plugin.css
+++ b/www/resources/plugin.css
@@ -1,3 +1,8 @@
 div.xowf-monaco-container {
     border: 1px solid grey;
 }
+
+div.xowf-monaco-container.disabled {
+    font-family: Menlo, Monaco, "Courier New", monospace;
+}
+
